Fri Apr  1 00:44:00 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	For SVR4 targets, enable gdb to set breakpoints in shared
	library functions before the executable is run.
	* elfread.c (elf_symtab_read):  Handle symbols for shared library
	functions.
	* sparc-tdep.c (in_solib_trampoline):  Renamed to in_plt_section
	and moved to objfiles.c.
	* objfiles.c (in_plt_section):  Moved to here from sparc-tdep.
	* config/tm-sysv4.h (IN_SOLIB_TRAMPOLINE):  Use new in_plt_section.
	* config/sparc/tm-sun4sol2.h (IN_SOLIB_TRAMPOLINE):  Removed,
	the new generic definition from tm-sysv4.h works for Solaris.

Wed Mar 30 16:14:27 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* elfread.c (elf_symtab_read): Change storage_needed,
	number_of_symbols and i to long.  Rename get_symtab_upper_bound to
	bfd_get_symtab_upper_bound.  Check for errors from
	bfd_get_symtab_upper_bound and bfd_canonicalize_symtab.
	* nlmread.c (nlm_symtab_read): Same changes.

Wed Mar 30 11:43:29 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* xcoffread.c (xcoff_next_symbol_text): New function.
	(read_xcoff_symtab): Set next_symbol_text_func to it.
	Move raw_symbol outside of read_xcoff_symtab.

	* remote.c (getpkt): Remove unused "out" label.

Wed Mar 30 09:15:42 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* breakpoint.c (print_it_normal): Allow GDB to notify the user
	about more than one watchpoint being triggered.

Wed Mar 30 08:24:18 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* config/m68k/tm-dpx2.h: Include tm-m68k.h not nonexistent tm-68k.h.

Wed Mar 30 00:31:49 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* blockframe.c (find_pc_partial_function):  mst_file_text
	symbols do not live in the shared library transfer table.
	* ch-exp.y (decode_integer_value, match_character_literal,
	match_bitstring_literal):  Guard tolower calls with isupper,
	tolower on old BSD systems blindly subtracts a constant.