@@ -1,3 +1,7 @@
+Fri Apr  1 14:04:34 1994  Jason Merrill  (jason@deneb.cygnus.com)
+
+	* symfile.c (deduce_language_from_filename): .cpp is a C++ extension.
+
 Fri Apr  1 00:44:00 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)
 
 	For SVR4 targets, enable gdb to set breakpoints in shared
